--- a/_scss/abstracts/_variables.scss
+++ b/_scss/abstracts/_variables.scss
@@ -34,6 +34,7 @@ $bg-dark-card: #152028;
 $bg-dark-code: #1d1f21;
 $bg-dark-form-input: #e9ecef;
 $bg-dark-badge: #375a7f;
+$bg-dark-footer: #343a40;
 
 // Foreground colors
 $fg-body: #4a4a4a;
